--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
   <meta charset="utf-8">
   <title>十四阁</title>
   <base href="/">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.aa50e69e5bfa8e17d49a.css"></head>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+<link rel="stylesheet" href="styles.ceb2e4f43a423d426e99.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.55810deb0494534ab8b8.js"></script><script type="text/javascript" src="main.29fd43504864b42f99af.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.55810deb0494534ab8b8.js"></script><script type="text/javascript" src="main.f539ec3b6d6c51a80544.js"></script></body>
 </html>
